# Airflow

./: .gitignore  Dockerfile  README.md  airflow.cfg  airflow.db  build.sh  pyproject.toml  requirements.txt
dags/: simple_dag.py  wanted_recruit.py
dags/data/: job_data.json
data/: wanted_recruit_data-20241210-174630.json  wanted_recruit_data-20241211-092708.json
logs/scheduler/: latest
src/managers/: driver_manager.py  header_manager.py
src/projects/wanted_recruit/modules/: wanted_recruit_api_process.py  wanted_recruit_raw_data_crawler.py
src/projects/wanted_recruit/modules/data/: wanted_recruit_data-20241209-165551.json
src/settings/: __init__.py  base.py  dev.py  prod.py
