[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["pervin0527 <zfbtldnz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23"
pandas = "^1.5"
scikit-learn = "^1.2"
matplotlib = "^3.6"
requests = "^2.28"
tqdm = "4.66.4"
googlemaps = "4.10.0"
pymongo = "4.8.0"
openai = "1.35.7"
selenium = "4.23.1"
webdriver-manager = "4.0.1"
pendulum = "2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
